# dataset-preparation-for-finetuning

./: .gitignore  README.md  code_instruction_generator.py  crawl_website.py  data_collector.py  document_data_collector.py  enhanced_data_collector.py  firecrawl_strat.py  generate_instruction.py  kaggle_data_collector.py  main.py  output.jsonl  plawright_crawl.py  pyproject.toml  requirements.txt  run_pipeline.py  scrape_cleaned.py  single_repo_test_script.py
data/mcp_test_dataset/: example_samples.md  file_summary.txt  test_dataset.jsonl
data/mcp_test_dataset_2/: example_samples.md  file_summary.txt  test_dataset.jsonl
